5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1734_2498.log
== TEST (2019-05-09 19:33:10) 
-- CODE:
a = int(imput("Digite num de habitantes A: "))
b = int(imput("Digite num de habitantes B: "))
pa = float(input("Digite o percentual de crescimento A: "))
pb = float(input("Digite o percentual de crescimento B: "))

pa = pa / 100
pb = pb / 100

ta = (a * pa) + pa
tb = (b * pb) + pb
at = 0

while(a < b and pa > pb):
	at = at + 1
	anosA = a * pa + at
	anosB = b * pb + at
	print(anosB - anosA)
	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(imput("Digite num de habitantes A: "))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:33:26) 
-- CODE:
a = int(input("Digite num de habitantes A: "))
b = int(input("Digite num de habitantes B: "))
pa = float(input("Digite o percentual de crescimento A: "))
pb = float(input("Digite o percentual de crescimento B: "))

pa = pa / 100
pb = pb / 100

ta = (a * pa) + pa
tb = (b * pb) + pb
at = 0

while(a < b and pa > pb):
	at = at + 1
	anosA = a * pa + at
	anosB = b * pb + at
	print(anosB - anosA)
	
	
	
	

-- OUTPUT:
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
-27903.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:42:55) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha
ppb= hb

while (ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:43:29) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha
ppb= hb

while (ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:43:43) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha
ppb= hb

while (ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:45:07) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha/100
ppb= hb/100

while (ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:46:33) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))/100
pb=float(input("percentual de crescimento de b: "))/100
anos=0
ppa= ha
ppb= hb

while (ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:47:13) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))/100
pb=float(input("percentual de crescimento de b: "))/100
anos=0
ppa= ha
ppb= hb
while (ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:47:56) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): ")
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha)/100
ppb= hb/100
while(ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- ERROR:
File "XXXX", line 4
    pb=float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:48:54) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): ")
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha)/100
ppb= hb/100
while(ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- ERROR:
File "XXXX", line 4
    pb=float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:49:37) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha/100
ppb= hb/100
while(ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:50:52) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha/100
ppb= hb/100

while(ppa <= ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:51:15) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha/100
ppb= hb/100

print("nao")
-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:52:39) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha/100
ppb= hb/100

while ppa <= ppb:
	ppa = ppa + ppa * pa
	ppb = ppb + ppb * pb
	anos = anos + 1
print(anos)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:53:31) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
pa = pa / 100
pb = pb / 100
ppa= ha
ppb= hb

while ppa <= ppb:
	ppa = ppa + ppa * pa
	ppb = ppb + ppb * pb
	anos = anos + 1
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:54:04) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
pa = pa / 100
pb = pb / 100
ppa= ha
ppb= hb

while ppa <= ppb:
	ppa = ppa + ppa * pa
	ppb = ppb + ppb * pb
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
0.288606
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:57:02) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
ppa= ha/100
ppb= hb/100
while(ppa<=ppb):
	ppa= ppa + ha*pa
	ppb= ppb + hb*pb
	anos= anos + 1
print(anos)	
-- EXECUTION TIME:
0.229391
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:42:17) 
-- CODE:
ha=int(input("numero de habitantes de a: "))
hb=int(input("numero de habitantes de b: "))
pa=float(input("percentual de crescimento de a(em porcentagem): "))
pb=float(input("percentual de crescimento de b: "))
anos=0
pa = pa / 100
pb = pb / 100
ppa= ha
ppb= hb

while ppa <= ppb:
	ppa = ppa + ppa * pa
	ppb = ppb + ppb * pb
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
0.132001
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
